<resources>
    <string name="app_name">Joypark</string>
    <string name="confirm">确定</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="no_account_to_register">还没有账号?\n去注册</string>
    <string name="finish">完成</string>
    <string name="input_address_search">直接输入地址搜索</string>
    <string name="input_apartment_search">直接输入社区名搜索</string>
    <string name="please_select_apartment">请选择园区</string>
    <string name="please_select_city">请选择城市</string>
    <string name="main_home">首页</string>
    <string name="main_circle">圈子</string>
    <string name="main_myself">我的</string>
    <string name="main_mail">悦购</string>
    <string name="park_service">园区服务</string>
    <string name="property_service">物业服务</string>
    <string name="look_detail">查看详情</string>
    <string name="share_title">分享app</string>
    <string name="message">短信</string>
    <string name="wchat">微信</string>
    <string name="share_to">分享至：</string>
    <string name="please_select_service_category">请选择相应的维修分类</string>
    <string name="contact_phone">联系电话</string>
    <string name="contact">联系人</string>
    <string name="repair_address">维修地址</string>
    <string name="repair_time">维修时间</string>
    <string name="please_select_repair_time">请选择维修时间</string>
    <string name="want_say">我想说：</string>
    <string name="add_service_description">请添加服务描述</string>
    <string name="predict_money">预计金额：</string>
    <string name="submit">提交</string>
    <string name="sir">先生</string>
    <string name="lady">女士</string>
    <string name="service_progress">服务进度：</string>
    <string name="make_a_blueprint">晒个图，有图有真相</string>
    <string name="please_input_repair_address">请输入维修地址</string>
    <string name="i_want_say">我想说...</string>
    <string name="share_to_circle">同时分享到圈子</string>
    <string name="praise_message">表扬消息</string>
    <string name="property_suggest_describe">\u3000\u3000你的建议非常宝贵，您的满意使我们不懈的追求，祝您生活愉快！</string>
    <string name="service_address">服务地址</string>
    <string name="please_select_service_time">请选择服务时间</string>
    <string name="service_time">服务时间</string>
    <string name="cancel_care">取消关注</string>
    <string name="all_content">全文</string>
    <string name="delete_post">删除</string>
    <string name="post">发帖</string>
    <string name="join">参与</string>
    <string name="care">关注</string>
    <string name="fans">粉丝</string>
    <string name="post_content">说点什么吧</string>
    <string name="send">发送</string>
    <string name="add_pic_content">添加图片(最多9张喔)</string>
    <string name="post_to">发布到</string>
    <string name="personal_main_page">个人主页</string>
    <string name="login_out">退出登录</string>
    <string name="my_walt">我的钱包</string>
    <string name="my_older">我的订单</string>
    <string name="my_service_record">我的服务记录</string>
    <string name="feedback">意见反馈</string>
    <string name="clean_cache">清理缓存</string>
    <string name="about">关于</string>
    <string name="head_image">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="park">园区</string>
    <string name="account">账号</string>
    <string name="birthday">生日</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="album_upload">相册上传</string>
    <string name="capture_take_photo">相机拍照</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="service_agreement">服务协议</string>
    <string name="share_load">分享下载</string>
    <string name="check_update">检查更新</string>
    <string name="invite_download">邀请好友下载，有兴趣一起玩！</string>
    <string name="share_for">分享到</string>
    <string name="moment">朋友圈</string>
    <string name="upgrade">升级</string>
    <string name="input_feed_content">请输入您要反馈的问题</string>
    <string name="leave_contact">请留下联系方式方便我们与你取得联系</string>
    <string name="phone_or_qq">手机号/qq/邮箱</string>
    <string name="park_describe">园区介绍</string>
    <string name="more">更多</string>
    <string name="park_enterprise">园区企业</string>
    <string name="all">全部</string>
    <string name="publish">发布</string>
    <string name="please_select_type">请选择分类...</string>
    <string name="publish_type">发帖类型</string>
    <string name="house_detail">房屋详情</string>
    <string name="no_available">暂无</string>
    <string name="house_describe">房源描述</string>
    <string name="contact_look_house">立刻联系看房</string>
    <string name="apartment_layout">户型：</string>
    <string name="house_area">面积：</string>
    <string name="decoration">装修：</string>
    <string name="house_orientation">朝向：</string>
    <string name="structure">结构：</string>
    <string name="floor">楼层：</string>
    <string name="call_look_house_phone">即将为您拨通看房热线</string>
    <string name="house_type">房屋类型</string>
    <string name="nacity_choice">南都精选</string>
    <string name="property_service_reply">物业客服回复：</string>
    <string name="finish_data">完善信息</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="write_finish">我写好了</string>
    <string name="expand_string">展开</string>
    <string name="collapsed_string">收起</string>
    <string name="pay_type">支付方式：</string>
    <string name="house_electric">房屋家电</string>
    <string name="mail">悦购</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="contact_people">联系人：</string>
    <string name="contact_phone2">联系电话：</string>
    <string name="service_address_detail">服务地址：</string>
    <string name="repair_time_detail">维修时间：</string>
    <string name="repair_money">维修费用：</string>
    <string name="my_need">我的需求：</string>
    <string name="handel_feed">处理反馈</string>
    <string name="responsible_person">负责人：</string>
    <string name="please_select_complaint_category">请选择相应的投诉分类</string>
    <string name="cancel_report">撤销预约</string>
    <string name="owner_evaluate">业主的评价：</string>
    <string name="you_service_evaluate">您对本次服务的评价</string>
    <string name="say_something">说点什么吧...</string>
    <string name="evaluate_content_desc">还可以输入200字</string>
    <string name="give_service_score">为本次服务打分</string>
    <string name="thank_evaluate_content">非常感谢您的评价，您的满意是我不懈的追求</string>
    <string name="evaluate_content">评价内容</string>
    <string name="service_score">服务打分</string>
    <string name="surprise">惊喜</string>
    <string name="my_door">我的门禁</string>
    <string name="no_open_door_time">暂无开门时间</string>
    <string name="start_apply">发起申请</string>
    <string name="confirm_apply">确定申请</string>
    <string name="apply_time">申请时间</string>
    <string name="apply_door">申请门禁</string>
    <string name="apply_statue">申请状态</string>
    <string name="turn_on_door">开启门禁</string>
</resources>
