<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f3"
    android:orientation="vertical">

    <include layout="@layout/app_title_layout" />

    <View
        android:layout_width="200px"
        android:layout_height="200px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="98px"
        android:background="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="36px"
        android:layout_marginTop="36px"
        android:textColor="@color/app_text_color"
        android:textSize="30px" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/myself_divide_line" />

        <TextView
            android:id="@+id/service_agreement"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="65px"
            android:text="@string/service_agreement"
            android:textColor="@color/gray_46"
            android:textSize="32px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20px"
            android:background="@color/myself_divide_line" />

        <TextView
            android:id="@+id/share_load"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:background="@drawable/selector_myself_click_bg"
            android:gravity="center_vertical"
            android:paddingLeft="65px"
            android:text="@string/share_load"
            android:textColor="@color/gray_46"
            android:textSize="32px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20px"
            android:background="@color/myself_divide_line" />

        <TextView
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:background="@drawable/selector_myself_click_bg"
            android:gravity="center_vertical"
            android:paddingLeft="65px"
            android:text="@string/check_update"
            android:textColor="@color/gray_46"
            android:textSize="32px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"

            android:background="@color/myself_divide_line" />

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>